[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Ergebnisse/card_title.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Carlito-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Carlito-BoldItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes and Scripts/View/Karten.gd" type="Script" id=4]
[ext_resource path="res://Assets/Ergebnisse/wirtschaft_status.png" type="Texture" id=5]
[ext_resource path="res://Assets/Ergebnisse/Zufriedenheit_status.png" type="Texture" id=6]
[ext_resource path="res://Assets/Leichtgrau.png" type="Texture" id=7]
[ext_resource path="res://Assets/Ergebnisse/status_arrow_down.png" type="Texture" id=8]
[ext_resource path="res://Assets/Ergebnisse/status_arrow_up.png" type="Texture" id=9]
[ext_resource path="res://Assets/Ergebnisse/Gesundheitswesen_status.png" type="Texture" id=10]
[ext_resource path="res://Assets/Ergebnisse/intensivbetten_status.png" type="Texture" id=11]
[ext_resource path="res://Assets/Ergebnisse/Sicherheitskräfte_status.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[node name="Karten" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 510.0
margin_top = 799.0
margin_right = 1778.0
margin_bottom = 1184.0
rect_scale = Vector2( 0.65, 0.678 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
custom_constants/separation = 50

[node name="Infoübersicht" type="Panel" parent="."]
visible = false
margin_left = 518.0
margin_top = 103.0
margin_right = 1367.0
margin_bottom = 751.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leichtgrau" type="Sprite" parent="Infoübersicht"]
position = Vector2( 422.159, 490.131 )
scale = Vector2( 1.31553, 1.27188 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Infoübersicht"]
position = Vector2( 672.53, 257.226 )
scale = Vector2( 1.19539, 1.19897 )
texture = ExtResource( 1 )

[node name="Effekt" type="Label" parent="Infoübersicht/Sprite"]
margin_left = -132.78
margin_top = 26.4279
margin_right = -56.7803
margin_bottom = 76.4279
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Infoübersicht/Sprite"]
margin_left = -63.4158
margin_top = 36.7473
margin_right = 100.584
margin_bottom = 63.7473
custom_fonts/font = SubResource( 2 )
text = "XY"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Beschreibung" type="Label" parent="Infoübersicht/Sprite"]
margin_left = -115.0
margin_top = 74.0
margin_right = 114.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "XY"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Infoübersicht/Sprite"]
margin_left = -65.0
margin_top = 132.499
margin_right = 71.0
margin_bottom = 164.499
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gesundheitswesen_status" type="Sprite" parent="Infoübersicht/Sprite/Control"]
position = Vector2( 12.687, 16.5 )
scale = Vector2( 0.248689, 0.227377 )
texture = ExtResource( 10 )

[node name="status_arrow_up" type="Sprite" parent="Infoübersicht/Sprite/Control/Gesundheitswesen_status"]
visible = false
position = Vector2( 38.1279, 2.64624 )
scale = Vector2( 2.24675, 2.64278 )
texture = ExtResource( 9 )

[node name="status_arrow_down" type="Sprite" parent="Infoübersicht/Sprite/Control/Gesundheitswesen_status"]
visible = false
position = Vector2( 33.4521, 10.2936 )
scale = Vector2( 2.24675, 2.64278 )
texture = ExtResource( 8 )

[node name="intensivbetten_status" type="Sprite" parent="Infoübersicht/Sprite/Control"]
position = Vector2( 94.118, 16.5 )
scale = Vector2( 0.249, 0.227 )
texture = ExtResource( 11 )

[node name="status_arrow_down" type="Sprite" parent="Infoübersicht/Sprite/Control/intensivbetten_status"]
visible = false
position = Vector2( 33.2419, 7.75757 )
scale = Vector2( 2.24395, 2.64717 )
texture = ExtResource( 8 )

[node name="status_arrow_up" type="Sprite" parent="Infoübersicht/Sprite/Control/intensivbetten_status"]
visible = false
position = Vector2( 33.2417, 0.94812 )
scale = Vector2( 2.24395, 2.64717 )
texture = ExtResource( 9 )

[node name="Sicherheitskräfte_status" type="Sprite" parent="Infoübersicht/Sprite/Control"]
position = Vector2( 67.905, 16.5 )
scale = Vector2( 0.249, 0.227 )
texture = ExtResource( 12 )

[node name="status_arrow_down" type="Sprite" parent="Infoübersicht/Sprite/Control/Sicherheitskräfte_status"]
visible = false
position = Vector2( 29.5603, 9.45972 )
scale = Vector2( 2.24395, 2.64717 )
texture = ExtResource( 8 )

[node name="status_arrow_up" type="Sprite" parent="Infoübersicht/Sprite/Control/Sicherheitskräfte_status"]
visible = false
position = Vector2( 34.2305, 0.948486 )
scale = Vector2( 2.24395, 2.64717 )
texture = ExtResource( 9 )

[node name="wirtschaft_status" type="Sprite" parent="Infoübersicht/Sprite/Control"]
position = Vector2( 40.595, 16.5 )
scale = Vector2( 0.249, 0.227 )
texture = ExtResource( 5 )

[node name="status_arrow_down" type="Sprite" parent="Infoübersicht/Sprite/Control/wirtschaft_status"]
visible = false
position = Vector2( 38.0671, 9.45935 )
scale = Vector2( 2.24395, 2.64717 )
texture = ExtResource( 8 )

[node name="status_arrow_up" type="Sprite" parent="Infoübersicht/Sprite/Control/wirtschaft_status"]
visible = false
position = Vector2( 30.2847, 0.948608 )
scale = Vector2( 2.24395, 2.64717 )
texture = ExtResource( 9 )

[node name="Zufriedenheit_status" type="Sprite" parent="Infoübersicht/Sprite/Control"]
position = Vector2( 120.689, 16.5 )
scale = Vector2( 0.249, 0.227 )
texture = ExtResource( 6 )

[node name="status_arrow_down" type="Sprite" parent="Infoübersicht/Sprite/Control/Zufriedenheit_status"]
visible = false
position = Vector2( 41.7107, 7.7572 )
scale = Vector2( 2.24395, 2.64717 )
texture = ExtResource( 8 )

[node name="status_arrow_up" type="Sprite" parent="Infoübersicht/Sprite/Control/Zufriedenheit_status"]
visible = false
position = Vector2( 38.5984, -2.45605 )
scale = Vector2( 2.24395, 2.64717 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Infoübersicht/Sprite"]
position = Vector2( -2.78082, -68.3873 )
scale = Vector2( 0.8, 0.8 )

[node name="Label" type="Label" parent="Infoübersicht"]
margin_left = 20.5406
margin_top = 58.6358
margin_right = 487.541
margin_bottom = 464.636
custom_fonts/font = SubResource( 3 )
text = "Dies sind die Vor- und Nachteile dieser Karte: Geld -100 Ansehen -15"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aktivieren" type="Button" parent="Infoübersicht"]
margin_left = 300.4
margin_top = 491.698
margin_right = 567.15
margin_bottom = 536.638
custom_fonts/font = SubResource( 4 )
text = "Aktivieren"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Schließen" type="Button" parent="Infoübersicht"]
margin_left = 300.392
margin_top = 560.32
margin_right = 567.142
margin_bottom = 605.26
custom_fonts/font = SubResource( 4 )
text = "Schließen"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Infoübersicht/Aktivieren" to="." method="_on_Aktivieren_pressed"]
[connection signal="pressed" from="Infoübersicht/Schließen" to="." method="_on_Schlieen_pressed"]
